chore: added organizationRouets.js to index.js

--- a/backend/.env
+++ b/backend/.env
@@ -11,6 +11,8 @@ DB_DATABASE = "student_org_management"
 
 DB_STUDENTTABLE = 'student'
 
+DB_ORGANIZATIONTABLE = 'organization'
+
 DB_WAITFORCONNECTIONS = true
 
 DB_CONNECTIONLIMIT = 10
