chore: added the organization_committee table;

--- a/backend/.env
+++ b/backend/.env
@@ -13,6 +13,8 @@ DB_STUDENTTABLE = 'student'
 
 DB_ORGANIZATIONTABLE = 'organization'
 
+DB_ORGANIZATIONCOMMITTEETABLE = 'organization_committee'
+
 DB_WAITFORCONNECTIONS = true
 
 DB_CONNECTIONLIMIT = 10
